fix: 修复Arch Linux不兼容Fory序列化【使用JDK原生序列化】

--- a/laokou-common/laokou-common-fory/pom.xml
+++ b/laokou-common/laokou-common-fory/pom.xml
@@ -21,6 +21,18 @@
       <groupId>org.apache.fory</groupId>
       <artifactId>fory-extensions</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-test</artifactId>
+      <scope>test</scope>
+      <optional>true</optional>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
 </project>
