--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,6 +38,7 @@ jobs:
           fail_ci_if_error: true
           files: |
             ./laokou-common/laokou-common-core/target/site/jacoco/jacoco.xml,
+            ./laokou-common/laokou-common-fory/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-trace/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-algorithm/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-context/target/site/jacoco/jacoco.xml,
