--- a/laokou-service/laokou-network/laokou-network-infrastructure/pom.xml
+++ b/laokou-service/laokou-network/laokou-network-infrastructure/pom.xml
@@ -55,6 +55,14 @@
           <groupId>org.apache.logging.log4j</groupId>
           <artifactId>log4j-to-slf4j</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-core</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
