feat: 升级至sb4，sc2025.1，jackson3，有问题后面慢慢解决，需要运行本项目，请直接运行3.5.4版本，主分支报错很正常，我会修改的，为您带来困惑深感抱歉

--- a/laokou-common/laokou-common-i18n/pom.xml
+++ b/laokou-common/laokou-common-i18n/pom.xml
@@ -52,7 +52,7 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
+      <groupId>tools.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
     <dependency>
@@ -60,8 +60,9 @@
       <artifactId>jackson-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <groupId>tools.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>3.0.0-rc2</version>
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
