--- a/laokou-common/laokou-common-websocket/pom.xml
+++ b/laokou-common/laokou-common-websocket/pom.xml
@@ -38,6 +38,10 @@
       <artifactId>laokou-common-nacos</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-web-server</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
