--- a/pom.xml
+++ b/pom.xml
@@ -100,17 +100,17 @@
     <!--spring-asciidoctor-backends版本-->
     <spring-asciidoctor-backends.version>0.0.7</spring-asciidoctor-backends.version>
     <!--spring-boot版本-->
-    <spring-boot.version>3.5.7</spring-boot.version>
+    <spring-boot.version>4.0.0-RC1</spring-boot.version>
     <!--spring-cloud版本-->
-    <spring-cloud.version>2025.0.0</spring-cloud.version>
+    <spring-cloud.version>2025.1.0-M4</spring-cloud.version>
     <!--cloud-alibaba版本-->
     <spring-cloud-alibaba.version>2025.0.0.0</spring-cloud-alibaba.version>
     <!--spring-framework版本-->
-    <spring-framework.version>6.2.12</spring-framework.version>
+    <spring-framework.version>7.0.0-RC2</spring-framework.version>
     <!--spring-data版本-->
     <spring-data.version>2025.0.5</spring-data.version>
     <!--spring-security版本-->
-    <spring-security.version>6.5.6</spring-security.version>
+    <spring-security.version>7.0.0-RC1</spring-security.version>
     <!--spring-ai版本-->
     <spring-ai.version>1.0.3</spring-ai.version>
     <!--spring-ai-alibaba版本-->
@@ -118,7 +118,7 @@
     <!--dubbo版本-->
     <dubbo.version>3.3.5</dubbo.version>
     <!--springdoc-openapi版本-->
-    <springdoc-openapi.version>2.8.13</springdoc-openapi.version>
+    <springdoc-openapi.version>3.0.0-M1</springdoc-openapi.version>
     <!--testcontainers版本-->
     <testcontainers.version>2.0.1</testcontainers.version>
     <!--vertx版本-->
@@ -132,11 +132,11 @@
     <!--opentelemetry版本-->
     <opentelemetry.version>1.55.0</opentelemetry.version>
     <!--netty版本-->
-    <netty.version>4.1.128.Final</netty.version>
+    <netty.version>4.2.7.Final</netty.version>
     <!--grpc版本-->
     <grpc.version>1.76.0</grpc.version>
     <!--jackson版本-->
-    <jackson.version>2.20.0</jackson.version>
+    <jackson.version>3.0.1</jackson.version>
     <!--okhttp版本-->
     <okhttp.version>4.12.0</okhttp.version>
     <!--redisson版本-->
@@ -227,8 +227,6 @@
     <mongodb.version>4.5.4</mongodb.version>
     <!--fastjson版本-->
     <fastjson.version>2.0.60</fastjson.version>
-    <!--spring-security-oauth2-authorization-server版本-->
-    <spring-security-oauth2-authorization-server.version>1.5.3</spring-security-oauth2-authorization-server.version>
     <!--swagger-annotations-jakarta版本-->
     <swagger-annotations-jakarta.version>2.2.39</swagger-annotations-jakarta.version>
     <!--jsqlparser版本-->
@@ -434,7 +432,7 @@
 
       <!-- =============================== 定义 Jackson 版本 =============================== -->
       <dependency>
-        <groupId>com.fasterxml.jackson</groupId>
+        <groupId>tools.jackson</groupId>
         <artifactId>jackson-bom</artifactId>
         <version>${jackson.version}</version>
         <type>pom</type>
@@ -705,12 +703,6 @@
         <groupId>com.github.whvcse</groupId>
         <artifactId>easy-captcha</artifactId>
         <version>${easy-captcha.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.springframework.security</groupId>
-        <artifactId>spring-security-oauth2-authorization-server</artifactId>
-        <version>${spring-security-oauth2-authorization-server.version}</version>
       </dependency>
 
       <dependency>
