--- a/laokou-common/laokou-common-trace/pom.xml
+++ b/laokou-common/laokou-common-trace/pom.xml
@@ -61,8 +61,16 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-        <groupId>io.prometheus</groupId>
-        <artifactId>prometheus-metrics-tracer-common</artifactId>
+      <groupId>io.prometheus</groupId>
+      <artifactId>prometheus-metrics-tracer-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-micrometer-metrics</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-micrometer-tracing</artifactId>
     </dependency>
   </dependencies>
 
