--- a/pom.xml
+++ b/pom.xml
@@ -221,16 +221,10 @@
     <mysql-connector-j.version>9.5.0</mysql-connector-j.version>
     <!--modbus4j版本-->
     <modbus4j.version>v3.1.0</modbus4j.version>
-    <!--mongodb版本-->
-    <mongodb.version>4.5.4</mongodb.version>
-    <!--fastjson版本-->
-    <fastjson.version>2.0.60</fastjson.version>
     <!--swagger-annotations-jakarta版本-->
     <swagger-annotations-jakarta.version>2.2.40</swagger-annotations-jakarta.version>
     <!--jsqlparser版本-->
     <jsqlparser.version>5.2</jsqlparser.version>
-    <!--gson版本-->
-    <gson.version>2.13.2</gson.version>
     <!--spotbugs版本-->
     <spotbugs.version>4.9.8</spotbugs.version>
     <!--docker主机-->
@@ -408,7 +402,7 @@
       </dependency>
       <!-- =============================== 定义 Netty 版本 =============================== -->
 
-      <!-- =============================== 定义 GRpc 版本 =============================== -->
+      <!-- =============================== 定义 gRPC 版本 =============================== -->
       <dependency>
         <groupId>io.grpc</groupId>
         <artifactId>grpc-bom</artifactId>
@@ -416,7 +410,7 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <!-- =============================== 定义 GRpc 版本 =============================== -->
+      <!-- =============================== 定义 gRPC 版本 =============================== -->
 
       <!-- =============================== 定义 Jackson 版本 =============================== -->
       <dependency>
@@ -445,20 +439,6 @@
         <version>${redisson.version}</version>
       </dependency>
       <!-- =============================== 定义 Redisson 版本 =============================== -->
-
-      <!-- =============================== Fastjson =============================== -->
-      <dependency>
-        <groupId>com.alibaba</groupId>
-        <artifactId>fastjson</artifactId>
-        <version>${fastjson.version}</version>
-      </dependency>
-      <!-- =============================== Fastjson =============================== -->
-
-      <dependency>
-        <groupId>com.google.code.gson</groupId>
-        <artifactId>gson</artifactId>
-        <version>${gson.version}</version>
-      </dependency>
 
       <dependency>
         <groupId>com.github.infiniteautomation</groupId>
