--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
     <!--spring-asciidoctor-backends版本-->
     <spring-asciidoctor-backends.version>0.0.7</spring-asciidoctor-backends.version>
     <!--spring-boot版本-->
-    <spring-boot.version>4.0.0-RC1</spring-boot.version>
+    <spring-boot.version>4.0.0-RC2</spring-boot.version>
     <!--spring-cloud版本-->
     <spring-cloud.version>2025.1.0-M4</spring-cloud.version>
     <!--cloud-alibaba版本-->
@@ -110,7 +110,9 @@
     <!--spring-data版本-->
     <spring-data.version>2025.1.0-RC2</spring-data.version>
     <!--spring-security版本-->
-    <spring-security.version>7.0.0-RC1</spring-security.version>
+    <spring-security.version>7.0.0-RC3</spring-security.version>
+    <!--spring-grpc版本-->
+    <spring-grpc.version>0.12.0</spring-grpc.version>
     <!--spring-ai版本-->
     <spring-ai.version>1.0.3</spring-ai.version>
     <!--spring-ai-alibaba版本-->
@@ -301,6 +303,16 @@
         <scope>import</scope>
       </dependency>
       <!-- =============================== 定义 Spring Security 版本 =============================== -->
+
+      <!-- =============================== 定义 Spring gRPC 版本 =============================== -->
+      <dependency>
+        <groupId>org.springframework.grpc</groupId>
+        <artifactId>spring-grpc-dependencies</artifactId>
+        <version>${spring-grpc.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- =============================== 定义 Spring gRPC 版本 =============================== -->
 
       <!-- =============================== 定义 Spring Ai 版本 =============================== -->
       <dependency>
