--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     <!--maven-compiler-plugin版本-->
     <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
     <!--spring-boot-maven-plugin版本-->
-    <spring-boot-maven-plugin.version>3.5.7</spring-boot-maven-plugin.version>
+    <spring-boot-maven-plugin.version>4.0.0-RC2</spring-boot-maven-plugin.version>
     <!--maven-surefire-plugin版本-->
     <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
     <!--maven-enforcer-plugin版本-->
