--- a/laokou-common/laokou-common-idempotent/pom.xml
+++ b/laokou-common/laokou-common-idempotent/pom.xml
@@ -14,7 +14,7 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-aop</artifactId>
+      <artifactId>spring-boot-starter-aspectj</artifactId>
       <exclusions>
         <exclusion>
           <groupId>ch.qos.logback</groupId>
