--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
     <!--spring-boot版本-->
     <spring-boot.version>4.0.0-RC2</spring-boot.version>
     <!--spring-cloud版本-->
-    <spring-cloud.version>2025.1.0-M4</spring-cloud.version>
+    <spring-cloud.version>2025.1.0-RC1</spring-cloud.version>
     <!--cloud-alibaba版本-->
     <spring-cloud-alibaba.version>2025.0.0.0</spring-cloud-alibaba.version>
     <!--spring-framework版本-->
@@ -112,7 +112,7 @@
     <!--spring-security版本-->
     <spring-security.version>7.0.0-RC3</spring-security.version>
     <!--spring-grpc版本-->
-    <spring-grpc.version>0.12.0</spring-grpc.version>
+    <spring-grpc.version>1.0.0-RC1</spring-grpc.version>
     <!--spring-ai版本-->
     <spring-ai.version>1.1.0</spring-ai.version>
     <!--spring-ai-alibaba版本-->
