--- a/laokou-service/laokou-generator/laokou-generator-infrastructure/pom.xml
+++ b/laokou-service/laokou-generator/laokou-generator-infrastructure/pom.xml
@@ -53,7 +53,7 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <artifactId>spring-boot-starter-webmvc</artifactId>
     </dependency>
   </dependencies>
 
