feat: 重构laokou-network模块，单个节点单个管理，去中心化

--- a/laokou-service/laokou-network/laokou-network-infrastructure/pom.xml
+++ b/laokou-service/laokou-network/laokou-network-infrastructure/pom.xml
@@ -18,6 +18,10 @@
       <artifactId>vertx-mqtt</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-web</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-core</artifactId>
       <version>${project.version}</version>
