--- a/laokou-common/laokou-common-plugin/pom.xml
+++ b/laokou-common/laokou-common-plugin/pom.xml
@@ -12,4 +12,12 @@
   <artifactId>laokou-common-plugin</artifactId>
   <version>4.0.0-SNAPSHOT</version>
 
+  <dependencies>
+    <!-- Vert.x Core (包含 Buffer 和基础工具) -->
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-core</artifactId>
+    </dependency>
+  </dependencies>
+
 </project>
