--- a/doc/deploy/docker-compose/docker-compose-dev.yml
+++ b/doc/deploy/docker-compose/docker-compose-dev.yml
@@ -49,35 +49,25 @@ services:
     networks:
       - iot_network
   kafka:
-    image: bitnami/kafka:4.0.0
+    image: apache/kafka:4.1.1
     container_name: kafka
     tty: true
     ports:
       - '9092:9092'
       - '9093:9093'
     environment:
-      # 节点ID
-      - KAFKA_BROKER_ID=1
-      # 允许使用kraft，即Kafka替代Zookeeper
-      - KAFKA_ENABLE_KRAFT=yes
-      # kafka角色，做broker，也要做controller
-      - KAFKA_CFG_PROCESS_ROLES=broker,controller
-      # 指定供外部使用的控制类请求信息
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      # 定义安全协议
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      # 定义kafka服务端socket监听端口
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      # 外网访问地址
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      # 允许使用PLAINTEXT监听器，默认false，不建议在生产环境使用
-      - ALLOW_PLAINTEXT_LISTENER=yes
-      # 设置broker最大内存，和初始内存
-      - KAFKA_HEAP_OPTS=-Xmx512M -Xms512M
-      # 集群地址
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
-      # 节点ID
-      - KAFKA_CFG_NODE_ID=1
+      - KAFKA_NODE_ID=1
+      - KAFKA_PROCESS_ROLES=broker,controller
+      - KAFKA_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      - KAFKA_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
+      - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
+      - KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS=0
+      - KAFKA_NUM_PARTITIONS=3
     restart: always
     privileged: true
     networks:
