--- a/laokou-service/laokou-network/laokou-network-infrastructure/pom.xml
+++ b/laokou-service/laokou-network/laokou-network-infrastructure/pom.xml
@@ -74,6 +74,11 @@
       <artifactId>laokou-common-pulsar</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-plugin</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
 </project>
