feat: 基于topic的协议处理，新增固件相关message，优化topic名称

--- a/laokou-common/laokou-common-fory/pom.xml
+++ b/laokou-common/laokou-common-fory/pom.xml
@@ -23,7 +23,7 @@
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-core</artifactId>
+      <artifactId>laokou-common-i18n</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
