--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -177,6 +177,40 @@ spring:
     template:
       observation-enabled: true
   cloud:
+    nacos:
+      discovery:
+        # 开启服务注册&发现
+        enabled: true
+        server-addr: ${NACOS-DISCOVERY-ADDRESS}
+        namespace: ${NACOS-NAMESPACE}
+        username: ${NACOS-USERNAME}
+        password: ${NACOS-PASSWORD}
+        group: ${NACOS-GROUP}
+        # https
+        secure: @SSL-ENABLED@
+        # true 临时 false 持久
+        ephemeral: true
+        cluster-name: ${NACOS-CLUSTER-NAME}
+        heart-beat:
+          # 开启心跳检测
+          enabled: true
+        # 每10秒发送一次心跳【单位毫秒】
+        heart-beat-interval: 10000
+        # 超过30秒，则标记为不健康
+        heart-beat-timeout: 30000
+      config:
+        # 开启配置中心
+        enabled: true
+        server-addr: ${NACOS-CONFIG-ADDRESS}
+        namespace: ${NACOS-NAMESPACE}
+        username: ${NACOS-USERNAME}
+        password: ${NACOS-PASSWORD}
+        cluster-name: ${NACOS-CLUSTER-NAME}
+        # https://github.com/alibaba/spring-cloud-alibaba/blob/2021.x/spring-cloud-alibaba-docs/src/main/asciidoc-zh/nacos-config.adoc
+        # 指定读取的文件格式
+        file-extension: yaml
+        group: ${NACOS-GROUP}
+        refresh-enabled: true
     loadbalancer:
       nacos:
         enabled: true
@@ -206,6 +240,58 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:/db/changelog/db.changelog-master.xml
+  cache:
+    configs:
+      users:
+        ttl: 5m
+        max-idle-time: 10m
+        max-size: 1024
+        eviction-mode: LFU
+      user_menu:
+        ttl: 5m
+        max-idle-time: 10m
+        max-size: 1024
+        eviction-mode: LFU
+      sources:
+        ttl: 5m
+        max-idle-time: 10m
+        max-size: 1024
+        eviction-mode: LFU
+      tenants:
+        ttl: 5m
+        max-idle-time: 10m
+        max-size: 1024
+        eviction-mode: LFU
+      packages:
+        ttl: 5m
+        max-idle-time: 10m
+        max-size: 1024
+        eviction-mode: LFU
+      messages:
+        ttl: 5m
+        max-idle-time: 10m
+        max-size: 1024
+        eviction-mode: LFU
+      menus:
+        ttl: 5m
+        max-idle-time: 10m
+        max-size: 1024
+        eviction-mode: LFU
+      dicts:
+        ttl: 5m
+        max-idle-time: 10m
+        max-size: 1024
+        eviction-mode: LFU
+      depts:
+        ttl: 5m
+        max-idle-time: 10m
+        max-size: 1024
+        eviction-mode: LFU
+      oss:
+        ttl: 5m
+        max-idle-time: 10m
+        max-size: 1024
+        eviction-mode: LFU
 
 logging:
   config: classpath:log4j2-@PROFILE-ACTIVE@.xml
