--- a/laokou-service/laokou-oss/laokou-oss-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-oss/laokou-oss-start/src/main/resources/application.yml
@@ -150,6 +150,13 @@ spring:
       ignored-interfaces:
         - docker0
         - veth.*
+  cache:
+    configs:
+      oss_log:
+        ttl: 5m
+        max-idle-time: 10m
+        max-size: 1024
+        eviction-mode: LFU
 
 # MybatisPlus配置
 mybatis-plus:
