--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,8 @@
     <dynamic-datasource.version>4.5.0</dynamic-datasource.version>
     <!--httpclient5版本-->
     <httpclient5.version>5.6</httpclient5.version>
+    <!--httpcore5版本-->
+    <httpcore5.version>5.4</httpcore5.version>
     <!--hibernate-validator版本-->
     <hibernate-validator.version>9.1.0.Final</hibernate-validator.version>
     <!--ip2region版本-->
@@ -626,6 +628,11 @@
         <groupId>org.apache.httpcomponents.client5</groupId>
         <artifactId>httpclient5</artifactId>
         <version>${httpclient5.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents.core5</groupId>
+        <artifactId>httpcore5</artifactId>
+        <version>${httpcore5.version}</version>
       </dependency>
       <dependency>
         <groupId>com.baomidou</groupId>
