test: 提交grpc client测试用例 feat: 使用sca2025.1.0快照

--- a/laokou-common/laokou-common-grpc/src/test/resources/application.yml
+++ b/laokou-common/laokou-common-grpc/src/test/resources/application.yml
@@ -1,7 +1,21 @@
 spring:
   application:
     name: laokou-common-grpc
+  grpc:
+    server:
+      servlet:
+        enabled: false
+      port: 9097
+    client:
+      channels:
+        laokou-common-grpc:
+           address: discovery://laokou-common-grpc
+           enable-keep-alive: true
   cloud:
     nacos:
       config:
         enabled: false
+      discovery:
+        enabled: true
+        metadata:
+          laokou_common_grpc_grpc_port: 9097
