--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     strategy:
       matrix:
         java-version: [25]
@@ -53,8 +56,13 @@ jobs:
             ./laokou-common/laokou-common-elasticsearch/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-mybatis-plus/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-starrocks/target/site/jacoco/jacoco.xml,
+            ./laokou-common/laokou-common-grpc/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-ftp/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Publish github package
+        run: mvnd --batch-mode deploy -P dev -DskipTests
+        env:
+          GITHUB_TOKEN: ${{ secrets.USER_TOKEN }}
       - name: Build the Docker image
         run: |
           # 登录阿里云镜像仓库
