feat: 配置setting.xml[读取GitHub package]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,20 @@ jobs:
       JVM_OPTS: -Xmx2048m
     steps:
       - checkout
+      - run: |
+          mkdir -p ~/.m2
+          cat <<EOF > ~/.m2/settings.xml
+          <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
+          https://maven.apache.org/xsd/settings-1.0.0.xsd">
+          <servers>
+          <server>
+          <id>github</id>
+          <username>${{ github.actor }}</username>
+          <password>${{ secrets.USER_TOKEN }}</password>
+          </server>
+          </servers>
+          </settings>
+          EOF
       - run: mvn clean install -P dev -DskipTests
