--- a/pom.xml
+++ b/pom.xml
@@ -791,7 +791,7 @@
         </server>
 
        -->
-      <id>github</id>
+      <id>spring-cloud-alibaba-github</id>
       <url>https://maven.pkg.github.com/alibaba/spring-cloud-alibaba</url>
       <releases>
         <enabled>false</enabled>
@@ -801,6 +801,14 @@
       </snapshots>
     </repository>
   </repositories>
+
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/KouShenhai/KCloud-Platform-IoT</url>
+    </repository>
+  </distributionManagement>
 
   <profiles>
     <!-- 开发环境 -->
@@ -885,14 +893,6 @@
       </activation>
     </profile>
   </profiles>
-
-  <distributionManagement>
-    <repository>
-      <id>github</id>
-      <name>GitHub Packages</name>
-      <url>https://maven.pkg.github.com/KouShenhai/KCloud-Platform-IoT</url>
-    </repository>
-  </distributionManagement>
 
   <build>
     <plugins>
