--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,7 +42,7 @@ jobs:
               <server>
                 <id>github</id>
                 <username>${{ github.actor }}</username>
-                <password>${{ secrets.USER_TOKEN }}</password>
+                <password>${{ secrets.MAVEN_TOKEN }}</password>
               </server>
             </servers>
           </settings>
@@ -76,10 +76,6 @@ jobs:
             ./laokou-common/laokou-common-grpc/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-ftp/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
-      - name: Publish github package
-        run: mvnd --batch-mode deploy -P dev -DskipTests
-        env:
-          GITHUB_TOKEN: ${{ secrets.USER_TOKEN }}
       - name: Build the Docker image
         run: |
           # 登录阿里云镜像仓库
