--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,8 @@ jobs:
           <servers>
           <server>
           <id>github</id>
-          <username>${{ github.actor }}</username>
-          <password>${{ secrets.USER_TOKEN }}</password>
+          <username>KouShenhai</username>
+          <password>${{ secrets.MAVEN_TOKEN }}</password>
           </server>
           </servers>
           </settings>
