--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -65,8 +65,8 @@ jobs:
           <servers>
             <server>
               <id>github</id>
-              <username>${{ github.actor }}</username>
-              <password>${{ secrets.USER_TOKEN }}</password>
+              <username>KouShenhai</username>
+              <password>${{ secrets.MAVEN_TOKEN }}</password>
             </server>
           </servers>
         </settings>
