--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,8 +41,8 @@ jobs:
             <servers>
               <server>
                 <id>github</id>
-                <username>${{ github.actor }}</username>
-                <password>${{ secrets.USER_TOKEN }}</password>
+                <username>KouShenhai</username>
+                <password>${{ secrets.MAVEN_TOKEN }}</password>
               </server>
             </servers>
           </settings>
