--- a/laokou-release/pom.xml
+++ b/laokou-release/pom.xml
@@ -109,7 +109,7 @@
 
   <distributionManagement>
     <repository>
-      <id>github</id>
+      <id>kcloud-platform-iot-github</id>
       <name>GitHub Packages</name>
       <url>https://maven.pkg.github.com/KouShenhai/KCloud-Platform-IoT</url>
     </repository>
