--- a/laokou-common/laokou-common-i18n/pom.xml
+++ b/laokou-common/laokou-common-i18n/pom.xml
@@ -25,21 +25,54 @@
     <version>4.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
+  <groupId>org.laokou</groupId>
   <artifactId>laokou-common-i18n</artifactId>
   <version>4.0.0</version>
+  <name>laokou-common-i18n</name>
+  <description>一个企业级微服务架构的云服务多租户IoT平台</description>
+  <url>https://koushenhai.github.io/KCloud-Platform-IoT</url>
+  <developers>
+    <developer>
+      <name>laokou</name>
+      <email>2413176044@qq.com</email>
+      <organization>https://github.com/KouShenhai</organization>
+      <roles>
+        <role>Project Manager</role>
+        <role>Developer</role>
+        <role>Architect</role>
+      </roles>
+    </developer>
+  </developers>
+  <scm>
+    <tag>kcloud-platform-iot-4.0.0.RELEASE</tag>
+    <url>https://github.com/KouShenhai/KCloud-Platform-IoT</url>
+    <connection>scm:git:https://github.com/KouShenhai/KCloud-Platform-IoT.git</connection>
+    <developerConnection>scm:git:https://github.com/KouShenhai/KCloud-Platform-IoT.git</developerConnection>
+  </scm>
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+      <comments>A business-friendly OSS license</comments>
+    </license>
+  </licenses>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
+      <version>${spring-framework.version}</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
     </dependency>
     <dependency>
       <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
+      <version>${hibernate-validator.version}</version>
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
@@ -49,10 +82,12 @@
     <dependency>
       <groupId>tools.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>tools.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
@@ -64,10 +99,12 @@
     <dependency>
       <groupId>io.swagger.core.v3</groupId>
       <artifactId>swagger-annotations-jakarta</artifactId>
+      <version>${swagger-annotations-jakarta.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
+      <version>${spring-boot.version}</version>
       <exclusions>
         <exclusion>
           <groupId>ch.qos.logback</groupId>
